# flyingsocks-router

./: .gitignore  CMakeLists.txt  README.md  iplist-builder.sh  iptables-config  ipv4-whitlist-build.py
conf/: logger.conf  server.conf  service.conf  whitelist.txt
scripts/: startup.sh  stop.sh  whitelist-init.sh
src/: boot.c  boot.h  buffer.c  buffer.h  direct_forward.c  direct_forward.h  dns_service.c  dns_service.h  logger.c  logger.h  misc.c  misc.h  pac.c  pac.h  server_forward.c  server_forward.h  service.c  service.h
